ingress-nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: el-vuejscrud-listener
      port:
        number: 8080
  rules:
  - host: "master-node.com"
    http:
      paths:
      - path: "/app"
        pathType: Prefix
        backend:
          service:
            name: nginx-app
            port:
              number: 80
